gzip compression css, js, images, fix alignment of headers on mobile, main header dotted background

--- a/src/CompanyPage/wwwroot/css/one.style.css
+++ b/src/CompanyPage/wwwroot/css/one.style.css
@@ -274,13 +274,23 @@ a:hover {
     .header-img{
     background-color: rgba(0, 0, 0, 0);
     background-repeat: no-repeat;
-    background-image: url(/img/sliders/revolution/bg1.jpg);
+    background-image: url(/img/sliders/revolution/bg1-min.jpg);
     background-size: cover;
     background-position: center center;
     width: 100%;
     height: 100%;
     opacity: 1;
     visibility: inherit;
+    }
+
+    .header-img:before {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    content: " ";
+    position: absolute;
+    background: url(../../img/patterns/gridtile.png) center fixed;
     }
 
     .header-img .header-content {
@@ -290,7 +300,7 @@ a:hover {
 
     .header-content .header-text {
         position: absolute;
-        top: 36%;
+        top: 28%;
         left: 0;
         right: 0;
     }
